--- a/serverSettings.json
+++ b/serverSettings.json
@@ -1,59 +1,20 @@
-[{
-  "123" : {
-    "commandSymbol": "?",
-    "maxDiceTimes" : 10,
-    "maxDiceSides" : 256,
-    "maxModifier"  : 1000,
-    "maxCoinFlips" : 10,
-    "subreddit"    : false,
-    "memes" : {
-      "wew" : true,
-      "ayy" : true,
-      "cat" : true,
-      "sad" : true,
-      "kms" : true,
-      "kys" : true,
-      "wakeup" : true,
-      "familyFriendly" : true
+{
+    "167763064513363968": {
+        "prefix": "~",
+        "maxDiceTimes": 10,
+        "maxDiceSides": 256,
+        "maxModifier": 1000,
+        "maxCoinFlips": 10,
+        "subreddit": false,
+        "memes": {
+            "wew": true,
+            "ayy": true,
+            "cat": true,
+            "sad": true,
+            "kms": true,
+            "kys": true,
+            "wakeup": true,
+            "familyFriendly": true
+        }
     }
-  },
-  
-  "456" : {
-    "commandSymbol": "?",
-    "maxDiceTimes" : 10,
-    "maxDiceSides" : 256,
-    "maxModifier"  : 1000,
-    "maxCoinFlips" : 10,
-    "subreddit"    : false,
-    "memes" : {
-      "wew" : true,
-      "ayy" : true,
-      "cat" : true,
-      "sad" : true,
-      "kms" : true,
-      "kys" : true,
-      "wakeup" : true,
-      "familyFriendly" : true
-    }
-  },
-  
-  "789" : {
-    "commandSymbol": "?",
-    "maxDiceTimes" : 10,
-    "maxDiceSides" : 256,
-    "maxModifier"  : 1000,
-    "maxCoinFlips" : 10,
-    "subreddit"    : false,
-    "memes" : {
-      "wew" : true,
-      "ayy" : true,
-      "cat" : true,
-      "sad" : true,
-      "kms" : true,
-      "kys" : true,
-      "wakeup" : true,
-      "familyFriendly" : true
-    }
-  }
-  
-}]
+}
